@startuml er-figure
hide circle
skinparam linetype ortho

entity "users" as users {
  * <<PK>> id
  --
  name
  email
  email_verified_at
  password
  remember_token
  created_at
  updated_at
}

entity "categories" as categories {
    * <<PK>> id
    --
    name
    user_id
    is_archive
    created_at
    updated_at
}

entity "records" as records {
    * <<PK>> id
    --
    category_id
    user_id
    minute
    note
    created_at
    updated_at
}

entity "category_orders" as category_orders {
    * <<PK>> id
    --
    user_id
    category_orders
    created_at
    updated_at
}

users ||--o{ categories
users ||--o{ records
users ||--o{ category_orders
categories ||--o{ records

@enduml